--- a/lokal/package.json
+++ b/lokal/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.31",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
@@ -33,6 +34,8 @@
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
     "lokal": "file:",
+    "lottie-ios": "^4.5.1",
+    "lottie-react-native": "^7.2.2",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "^0.76.7",
@@ -42,6 +45,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-video": "^6.10.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
